update all explanation interface and read me. Add requirements.text file

--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,12 @@
 			<canvas id="main-canvas"></canvas>
 		</div>
 		<div class = "button-div">
-			<button id = "e1" class = "button">Event 1</button>
-			<button id = "e2" class = "button">Event 2</button>
-			<button id = "e3" class = "button">Event 3</button>
+			<button id = "e1" class = "button">E1</button>
+			<button id = "e2" class = "button">E2</button>
+			<button id = "e3" class = "button">E3</button>
+			<button id = "e4" class = "button">E4</button>
+			<button id = "e5" class = "button">E5</button>
+			<button id = "e6" class = "button">E6</button>
 			<button id = "hide" class = "button">Off</button>
 		</div>
 	</div>
